--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Welcome to the poem generator</h1>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>
+      and is hosted in
+      <a href="https://newaigenerator.netlify.app/">Netlify</a>.
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
