--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       This AI project was coded by
       <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>
       and is hosted in
-      <a href="https://newaigenerator.netlify.app/">Netlify</a>.
+      <a href="https://newaigenerator.netlify.app/" target="_blank">Netlify</a>.
     </footer>
     <script src="src/index.js"></script>
   </body>
