--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>AI Poem generator</title>
   </head>
   <body>
-    <h1>Welcome to the poem generator</h1>
+    <header><h1>Welcome to the poem generator</h1></header>
+
+    <main>
+      <form>
+        <input type="text" placeholder="Enter the topic of the poem" 
+        autofocus
+        required
+        autocomplete="off"/>
+        <input type="submit" />
+      </form>
+      <div>
+        The poem will go here 
+      </br>
+        The poem will go here
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>
