--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <footer>
         This AI project was coded by
         <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>
-        and is hosted in
+        and it is hosted in
         <a href="https://newaigenerator.netlify.app/" target="_blank"
           >Netlify</a
         >
