--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
       </main>
 
       <footer>
-        This AI project was coded by
-        <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>
-        and it is hosted in
+        This project was coded by
+        <a href="https://github.com/Jen-94" target="_blank">Jennifer Soto</a>.
+        It is
+        <a href="https://github.com/Jen-94/AI_Generator" target="_blank"
+          >open-sourced in Github</a
+        >
+        and hosted in
         <a href="https://newaigenerator.netlify.app/" target="_blank"
           >Netlify</a
         >
